# roaming-ingestion-pipelines

./: .gitignore  Makefile  README.md  activate_env.ps1  install_msys2_make.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: test-pipeline.yml
src/: config.py
src/connectors/: teradata.py
src/pipelines/: pipeline.py
src/utils/: fakedata.py  logger.py  sqlreader.py  utils.py
tests/sql/: test_query.sql
tests/unit/: test_sqlreader.py  test_teradata.py  test_utils.py
